--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true 
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/HR
 spring.datasource.username=postgres
 spring.datasource.password=1234
 
 
+spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
-
