--- a/hr-frontend/package.json
+++ b/hr-frontend/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vue-shadow-dom": "^1.6.0",
     "vuetify": "^2.6.0"
   },
   "devDependencies": {
