--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,12 @@ spring.datasource.password=1234
 
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=simsekyasin2900@gmail.com
+spring.mail.password=jiammwnjazkpksgr
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
