--- a/hr-frontend/package.json
+++ b/hr-frontend/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "babel-preset-es2015": "^6.24.1",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
+    "vue-axios": "^3.4.1",
     "vue-router": "^3.5.1",
     "vue-shadow-dom": "^1.6.0",
     "vuetify": "^2.6.0"
