THE ERRORS IN MANY TO MANY RELATIONSHIP WERE CORRECTED.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,4 @@ spring.mail.password=jiammwnjazkpksgr
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+spring.jackson.serialization.fail-on-empty-beans=false
