--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/HR
 spring.datasource.username=postgres
-spring.datasource.password=1234
-
+spring.datasource.password=04051993
 
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
